feat(manager): support enabling incubator modules via --incubator
Some plugins need to link an optional JDK incubator module (e.g.
jdk.incubator.vector) into the generated runtime image and launcher,
without hardcoding module names into the shared launcher-generation
code. Add a repeatable --incubator <name> option to `zilla install`,
mapped to jdk.incubator.<name>, wired into jlink's module set and the
generated launcher's JAVA_OPTIONS. Defaults to an empty list, so
existing behavior is unchanged when the option is not passed.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01V4mgLEhQz15ZKQp6KKKsmX